--- a/index.html
+++ b/index.html
@@ -1,27 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="styles/style.css" />
-    <title>Tennis Game</title>
-  </head>
-  <body>
-  
-    <div class="game-intro">
-<img src="./images/logo.jpg" alt="" width="340" height="301" class="logo-img" />     
- <br />
-      <button id="start-button">StartGame</button>
-      <p>Use the left and right arrow to control the Tennis game!</p>
-  </div>
-    <div id="game-board">
-      
-      <canvas id="gameCanvas" width="800" height="600"></canvas>
-      </div>
+<head>
+<meta charset="UTF-8">
+<title>tennis Game</title>
+<style>
+        body{
+            background-color: green;
+        }
+        #tennis{
+            border: 2px solid #FFF;
+            position: absolute;
+            margin :auto;
+            top:0;
+            right:0;
+            left:0;
+            bottom:0;
+        }
+    </style>
+<script language="JavaScript" type="text/JavaScript">
+<!--
+function MM_reloadPage(init) {  //reloads the window if Nav4 resized
+  if (init==true) with (navigator) {if ((appName=="Netscape")&&(parseInt(appVersion)==4)) {
+    document.MM_pgW=innerWidth; document.MM_pgH=innerHeight; onresize=MM_reloadPage; }}
+  else if (innerWidth!=document.MM_pgW || innerHeight!=document.MM_pgH) location.reload();
+}
+MM_reloadPage(true);
+//-->
+</script>
+</head>
+<body>
+   <canvas id="tennis" width="600" height="400"></canvas>
+<div align="justify">
+       <p>
+    <script src="tennis.js"></script>
+  </p>
+       <div id="Layer1" style="position:absolute; width:290px; height:156px; z-index:1; left: 1219px; top: 167px;"><img src="images/logo.jpg" width="346" height="210"></div>
+       <div id="Layer2" style="position:absolute; width:368px; height:156px; z-index:2; left: 1216px; top: 436px;"><img src="images/R.8217c2f6cd61f1fe1f1155794ab2a339.jpg" width="364" height="232"></div>
+       <form name="form1" method="post" action="game.html">
+         <input name="backtothegame" type="submit" id="backtothegame" value="backtothegame">
+  </form>
+       <p><img src="images/Tennis-Team-Logo-Template-by-vectorwithin-580x387.jpg" width="361" height="246">
+       </p>
+       <p><img src="images/TPC%20court%20pic.jpg" width="361" height="246"> </p>
 
-      <script src="index.js"></script>
-    </div>
-
-  </body>
+ 
+</div>
+</body>
 </html>
